// Proyecto Salto v2 — esquema PostgreSQL
// Fuente de verdad del modelo; sincronizar con SQLAlchemy en backend/app/models/

Enum user_role {
  super_admin
  coach
  viewer
}

Enum caso_etapa {
  identificacion
  diseno
  implementacion
  marketplace
}

Enum caso_estado {
  enproceso
  implementado
  publicado
}

Enum caso_coach {
  jhonatan
  dario
}

Enum caso_ola {
  ola_1
  ola_2
  ola_3
}

Table users {
  id uuid [pk]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  nombre varchar(255) [not null]
  role user_role [not null, default: 'viewer']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Coaches y super_admin. Registro crea viewer; super_admin asigna roles.'
}

Table modulos_aprendizaje {
  slug varchar(64) [pk]
  titulo varchar(255) [not null]
  duracion_estimada varchar(64) [not null, default: '']
  total_pasos integer [not null, default: 7]
  created_at timestamptz [not null, default: `now()`]

  Note: 'Catálogo de módulos asíncronos (seed: pedagogia-entornos-digitales). El contenido vive en el front; aquí solo metadatos.'
}

Table modulos_progreso {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  modulo_slug varchar(64) [not null, ref: > modulos_aprendizaje.slug]
  current_step integer [not null, default: 0]
  // enteros de paneles visitados, p.ej. [0,1,2]
  visited jsonb [not null, default: '[]']
  // { "q1a": "b", ... } — valor seleccionado por checkpoint
  quizzes jsonb [not null, default: '{}']
  // { "chip-1": "good", ... } — cuadrante de la matriz frecuencia×complejidad
  matrix jsonb [not null, default: '{}']
  // { "senales-coach": "...", "resistencia": "..." }
  reflexiones jsonb [not null, default: '{}']
  completed_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Un progreso por usuario y módulo. JSONB a propósito: el set de quizzes/chips es propio de cada HTML y no justifica tablas por pregunta.'
}

Table casos {
  id uuid [pk]
  codigo varchar(64) [unique]
  slug varchar(255) [unique, not null]
  titulo varchar(255) [not null]
  resumen varchar(140) [not null]
  champion varchar(255) [not null]
  area varchar(255) [not null]
  coach caso_coach
  ola caso_ola
  owner_user_id uuid [not null, ref: > users.id]

  descripcion text
  problema text
  valor_esperado text
  publico_objetivo text
  alcance text
  diseno text

  herramientas text[] [not null, default: '{}']
  beneficiarios text[] [not null, default: '{}']
  tags text[] [not null, default: '{}']

  // { "entradas": string[], "pasos": string[], "salidas": string[] }
  flujo jsonb [not null, default: '{"entradas":[],"pasos":[],"salidas":[]}']

  // [{ "titulo": string, "contenido": string }, ...] — orden = índice
  prompts jsonb [not null, default: '[]']
  skills jsonb [not null, default: '[]']

  etapa_actual caso_etapa [not null, default: 'identificacion']
  estado caso_estado [not null, default: 'enproceso']
  avance_pct integer [not null, default: 25]
  visible_publico boolean [not null, default: false]

  adopcion_nivel varchar(64)
  adopcion_detalle text
  participacion_nivel varchar(64)
  participacion_detalle text
  eficiencia_resumen varchar(255)
  eficiencia_detalle text

  fecha_identificado date
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: 'Caso 100% estructurado. avance_pct es editable libremente (0-100), ya no se deriva de etapa_actual. dias_activo se sigue derivando en lectura.'
}

indexes {
  (casos.visible_publico)
  (casos.owner_user_id)
  (casos.etapa_actual)
  (casos.estado)
  (modulos_progreso.user_id)
  (modulos_progreso.modulo_slug)
  (modulos_progreso.user_id, modulos_progreso.modulo_slug) [unique]
}
